# python-multimodule-docker-ci

./: Makefile  README.md
.github/workflows/: makefile.yml
applications/app-1/: Dockerfile  Makefile  README.md  pyproject.toml
applications/app-1/src/app_1/: handler.py
